--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -1,15 +1,17 @@
 {
   "extensionTitle": "Енот",
   "clearButton": "Очистить",
-  "countWords": "Слов",
-  "countSymbols": "Символов",
+  "countWords": "Слова",
+  "countSymbols": "Символы",
   "copyRawText": "Текст",
   "settingsTitle": "Настройки",
-  "typesOfBlockHeading": "Типы блоков для подсчета",
-  "typesOfTextHeading": "Типы стилей текста для подсчета",
-  "counterType": "Тип счетчика",
+  "type1_strings": "Типы строк для подсчета",
+  "type2_blocks": "Типы блоков для подсчета",
+  "type3_lists": "Типы списков для подсчета",
+  "type4_text": "Типы стилей текста для подсчета",
+  "type5_counter": "Тип счетчика",
   "Page title": "Заголовок",
-  "Text block": "Текстовый блок",
+  "Text block": "Текстовый",
   "Heading 1": "Заголовок H1",
   "H1 content": "Содержание H1",
   "Heading 2": "Заголовок H2",
@@ -18,19 +20,20 @@
   "H3 content": "Содержание H3",
   "Quote block": "Цитата",
   "To-do list": "Список задач",
-  "Bulleted list": "Маркированный список",
-  "Numbered list": "Нумерованный список",
-  "Toggle block": "Скрываемый блок",
+  "Bulleted list": "Маркированный",
+  "Numbered list": "Нумерованный",
+  "Toggle block": "Скрываемый",
   "Columns": "Колонки",
   "Content": "Контент",
   "Table": "Таблица",
   "Code block": "Блок кода",
-  "Callout block": "Всплывающий блок",
+  "Callout block": "Всплывающий",
   "Bold": "Жирный",
   "Italic": "Курсив",
   "Underline": "Подчеркнутый",
   "Strike": "Зачеркнутый",
   "Code": "Строка кода",
   "Words": "Слова",
-  "Symbols": "Символы"
+  "Symbols": "Символы",
+  "Placeholder": "Чтобы начать подсчет, нажмите на знак ✚, когда активна вкладка YoNote."
 }
